2008-06-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c:
   Fix Windows build.


2008-06-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c, src/documentprivate.h:
   Don't colourise any documents until they need to be drawn. This
   should make Save All faster for filetypes that support typename
   highlighting, and makes the document_delay_colourise(),
   document_colourise_all() functions redundant (they'll be removed in
   the next commit).
   Note: I'll move on_editor_expose_event() to editor.c.
 * src/dialogs.c:
   Use stack buffers for g_vsnprintf() instead of heap allocation.
 * src/callbacks.c, src/keyfile.c, src/document.c, src/document.h,
   src/main.c, src/socket.c:
   Remove document_delay_colourise(), document_colourise_all().
 * src/document.c, src/editor.c, src/editor.h:
   Move on_editor_expose_event(), create_new_sci() to editor.c.
   Make on_editor_button_press_event() and on_editor_scroll_event()
   static.


2008-06-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c, src/dialogs.c:
   Add dialogs_show_input_numeric().
 * geany.glade, src/callbacks.c, src/callbacks.h, src/editor.c,
   src/editor.h, src/interface.c:
   Add "Replace spaces by tabs".
 * doc/geany.txt, doc/geany.html, src/keybindings.c, src/keybindings.h,
   src/plugindata.h:
   Add keybindings for Line wrapping, Line breaking, Toggle fold and
   Replace Spaces by tabs.
   Refactor different document keybindings callback functions into
   cb_func_document_action().
 * src/editor.c:
   Improve scrolling on wrapped lines to avoid having search results on
   wrapped lines but outside of visible lines.
 * src/editor.c:
   Allow symbol auto completion in embedded JavaScript in HTML files
   (closes #1997409).
 * src/document.c, src/editor.c, src/editor.h:
   Allow scrolling page by page by holding down the Shift or Alt key
   (closes #1995405).
 * src/msgwindow.c: